<resources>
    <string name="app_name">Coinpet</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_splash">COINPET</string>
    <string name="title_activity_splash_activity.">COINPET</string>
    <string name="title_activity_my_pet">나의 코인펫</string>


    <string name="title_section1">목표</string>
    <string name="title_section2">저금 기록</string>

<!-- CREATE: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_tutorial">TutorialActivity</string>
    <string name="please_insert_pn">제품 번호를 입력해주세요.</string>
    <string name="next">다음</string>
    <string name="push_button_on_device">제 목소리가 들리면 확인을 눌러주세요!</string>
    <string name="letsgo">이제 저를 만나러 갈까요?</string>
    <string name="confirm">확인</string>
    <string name="title_activity_signup">회원 등록</string>
    <string name="name">이름</string>
    <string name="male">남자</string>
    <string name="female">여자</string>
    <string name="goal">목표</string>
    <string name="set_a_goal">목표를 입력하세요</string>
    <string name="next_nn"><![CDATA[다음 >>]]></string>
    <string name="won">원</string>
    <string name="title_activity_transparent">목표 설정</string>
    <string name="write_a_goal">목표를 적어주세요</string>
    <string name="write_goal_money">달성 금액을 적어주세요</string>
    <string name="goal_money">달성 금액</string>
    <string name="set_period">기간 설정(일)</string>
    <string name="title_activity_setting">설정</string>
    <string name="title_activity_quest">퀘스트</string>
    <string name="title_activity_friends">코인펫 친구들</string>
    <string name="title_activity_quiz">퀴즈</string>
    <string name="show_hint">힌트보기</string>
    <string name="diff_easy">쉬움</string>
    <string name="diff_normal">보통</string>
    <string name="diff_difficult">어려움</string>
    <string name="btn_tocheck">검사 받기</string>
    <string name="btn_checking">확인 중</string>
    <string name="btn_finished">완료</string>
    <string name="btn_retry">다시 검사 받기</string>
    <string name="btn_doing">수행 중</string>
    <string name="yes">알겠어요!</string>
    
    <!-- dialog -->
    <string name="dialog_next_quiz">이제 다른 문제를 풀어볼까요?</string>
    <string name="i_can">계속 할래요</string>
    <string name="no_i_cannot">그만 할래요</string>
    <string name="dialog_time_over">시간 초과</string>
    <string name="dialog_wrong">아니에요</string>
    <string name="dialog_qcoin_over">문제 동전이 모두 떨어졌어요.</string>
    <string name="try_tmr">내일 다시 도전해봐요</string>
    <string name="reconnect_pad">패드를 다시 연결해주세요.</string>
    <string name="dialog_right">맞았어요</string>
    <string name="title_activity_dialog">DialogActivity</string>
    <string name="way_to_save">구출 방법</string>
    <string name="title_activity_story">StoryActivity</string>
    <string name="next_time">다음에요!</string>

    <!-- story -->
    <string name="story_text1">여기는 모아모아 마을!\n코인펫 친구들은\n이곳에서 사이좋게 살고 있었답니다.</string>
    <string name="story_text2">우리 코인펫 친구들은\n어린이 친구들이 저축할 때 생기는\n모아에너지로 움직여요</string>
    <string name="story_text3">하지만 어린이 친구들이 점점\n저금을 하지 않게되어\n코인펫 친구들이 모두 멈춰버렸어요.</string>
    <string name="story_text4">저 코코만 빼고말이죠.\n하지만 이제 저도 모아에너지가\n다 되어가요. </string>
    <string name="story_text5">어린이 친구..!\n저를 도와주세요...\n저에게 동전을 넣어주세요..!</string>

</resources>
