<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.quadcoder.coinpet.page.common.GoalSettingActivity">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imgvPet"
            android:src="@drawable/pet_set_goal"
            android:layout_gravity="center_horizontal" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/signup_box">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/goal"
                android:id="@+id/textView3"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:textSize="20dp"
                android:textColor="#000" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/etName"
                android:hint="@string/write_a_goal"
                android:textAlignment="center"
                android:layout_gravity="center_horizontal"
                android:singleLine="true"
                android:background="@drawable/long_input_bg"
                android:gravity="center"
                android:layout_marginTop="14dp"
                android:clickable="true"
                android:inputType="text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/goal_money"
                android:id="@+id/textView5"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:textSize="20dp"
                android:textColor="#000" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/etGoalMoney"
                android:hint="@string/write_goal_money"
                android:textAlignment="center"
                android:layout_gravity="center_horizontal"
                android:singleLine="true"
                android:background="@drawable/long_input_bg"
                android:gravity="center"
                android:layout_marginTop="14dp"
                android:inputType="number" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/set_period"
                android:id="@+id/textView4"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:textSize="20dp"
                android:textColor="#000" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="14dp">

                <ImageButton
                    android:layout_width="30dp"
                    android:layout_height="40dp"
                    android:id="@+id/imgbtnPrev"
                    android:src="@drawable/btn_left"
                    android:background="@null" />

                <EditText
                    android:layout_width="106dp"
                    android:layout_height="46dp"
                    android:inputType="number"
                    android:ems="10"
                    android:id="@+id/etPeriod"
                    android:background="@drawable/short_input_bg"
                    android:autoText="true"
                    android:text="9"
                    android:selectAllOnFocus="false"
                    android:gravity="center"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp" />

                <ImageButton
                    android:layout_width="30dp"
                    android:layout_height="40dp"
                    android:id="@+id/imgbtnNext"
                    android:src="@drawable/btn_right"
                    android:background="@null" />

            </LinearLayout>

            <Button
                android:layout_width="92dp"
                android:layout_height="31dp"
                android:text="@string/confirm"
                android:id="@+id/btnNext"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/btn_red"
                android:layout_marginTop="20dp"
                android:textColor="#fff" />

        </LinearLayout>
    </LinearLayout>
</FrameLayout>
